; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/touch_pad_read/main/esp32/extr_tp_read_main.c_tp_example_touch_pad_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/touch_pad_read/main/esp32/extr_tp_read_main.c_tp_example_touch_pad_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOUCH_PAD_MAX = common dso_local global i32 0, align 4
@TOUCH_THRESH_NO_USE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @tp_example_touch_pad_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tp_example_touch_pad_init() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %10, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @TOUCH_PAD_MAX, align 4
  %5 = icmp slt i32 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %2
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @TOUCH_THRESH_NO_USE, align 4
  %9 = call i32 @touch_pad_config(i32 %7, i32 %8)
  br label %10

10:                                               ; preds = %6
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %1, align 4
  br label %2

13:                                               ; preds = %2
  ret void
}

declare dso_local i32 @touch_pad_config(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
